fix(a11y): remove aria-hidden when menu is visible
add aria-controls for menu toggler
move aria-label to interactive element
add aria-current page for homepage link

--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,9 @@ body {
   margin: 0;
 }
 
+[hidden] {
+  display: none !important;
+}
 #root {
   position: relative;
 }
